v18.1/3.最佳实践/6.增量加载.md
# incremental-loading

根据数据的不同，加载非常大的文件可能会花费一些时间和/或达到浏览器功能的极限。所以,每当你试图加载一个大文件的数据或公式嵌入,建议使用增量加载特性来缩短数据处理时间和优化装载过程。
增量加载特性首先加载带有一些数据的活动表单，然后在后台逐段加载其余数据，如公式、单元格值和定制名称。当使用[fromJSON](gcdocsite__documentlink?toc-item-id=8a4039d6-22a0-4e4c-81a6-dd3e37d185b0#fromJSON)函数加载数据时，可以在选项中将 **incrementalLoading** 设置为true。您还可以使用incrementalLoading中的回调函数来获取加载状态，或者设置加载完成后要执行的下一个动作。还可以通过将 **doNotRecalculateAfterLoad** 设置为false来指定在加载数据之后是否重新计算单元格值。
每当在数据加载过程中执行任何UI事件时，SpreadJS首先处理该事件，然后在表单中加载其余的数据。

> **注意:** 每当在数据加载过程中执行任何UI事件时，SpreadJS首先处理该事件，然后在表单中加载其余的数据。
> 下面的示例递增地在表单中加载一个JSON文件。

以下示例会逐步将一个JSON文件加载到工作表中，并在加载过程中将工作表名称显示在控制台日志中。
![incrementalload](/DOCUMENT_SITE_LINK_PREFIX_HERE/document-site-files/images/5fefd5d8-238b-4c13-893b-6f22fcc5b9dd/incrementalload.593cbf.gif)
这段代码展示了如何使用增量加载加载JSON文件。

```JavaScript
var loadingStatus = new LoadingStatus('LoadingStatus', { tipText: 'LoadingStatus' });
statusBar.add(loadingStatus);

var incrementalEle = document.getElementById("incremental");
function fromJSON(json) {
    if (incrementalEle.checked) {
        spread.fromJSON(json, {
            doNotRecalculateAfterLoad: true,
            incrementalLoading: {
                loading: function (progress, args) {
                    progress = progress * 100;
                    document.getElementById("statusBar").innerText = "Loading: " + progress.toFixed(2) + "%";
                    loadingStatus.updateProgress(progress);
                    console.log(progress, args.sheet.name());
                },
                loaded: function () {
                    document.getElementById("statusBar").innerText = "Finish";
                }
            }
        });
    } else {
        spread.fromJSON(json);
        loadingStatus.updateText("Ready");
    }
}
```